<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".historyTab.view.HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:background="@color/secondarySystemBackground"
        android:orientation="vertical">

        <com.example.healthAppAndroid.common.views.SegmentedControl
            android:id="@+id/rangePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftTitle="@string/historySegment1"
            app:midTitle="@string/historySegment2"
            app:rightTitle="@string/historySegment3" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/systemGroupedBackground"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <com.example.healthAppAndroid.historyTab.view.TotalWorkoutsChart
                android:id="@+id/totalWorkoutsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.example.healthAppAndroid.historyTab.view.WorkoutTypeChart
                android:id="@+id/workoutTypeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.example.healthAppAndroid.historyTab.view.LiftingChart
                android:id="@+id/liftContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
