<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/cancelBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="17sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeTextType="uniform"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:maxLines="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/systemBlue"
            app:iconTint="@null" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <android.widget.Button
            android:id="@+id/submitBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="17sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeTextType="uniform"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:maxLines="1"
            android:text="@string/go"
            android:textAllCaps="false"
            android:textColor="@color/secondaryLabel"
            app:iconTint="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:screenReaderFocusable="false"
            android:text="@string/setupWorkoutPickerTitle"
            android:textColor="@color/label"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/workoutPicker"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/setupWorkoutPickerTitle"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <LinearLayout
            android:id="@+id/textFieldStack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" />
    </LinearLayout>
</LinearLayout>
